fix: fail the reindex on broken pages, fill trending from later ranks and send broken place events to the dlq